Add minimal root page
Create the package structure for the application.

Create a minimal root page template that only includes a <head> element
without a ‹body>.

Add FastAPI, Jinja2, and uvicorn as requirements and HTMX as a
development requirement (required for tests).

Remove the placeholder test.

Ignore the Ruff's S101 rule that prevents the use of 'assert' in the
`tests` package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ max-args = 10
   # type annotation
   "ANN",
   # implicit namespace package
-  "INP001"
+  "INP001",
+  # use of assert
+  "S101"
 ]
 
 
