--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ ignore = [
   # for compatibility with the Ruff formatter
   "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002",
   # type annotation for self and cls
-  "ANN101", "ANN102"
+  "ANN101", "ANN102",
+  # function call in default argument
+  "B008"
 ]
 
 [tool.ruff.lint.pycodestyle]
