Add Alembic as database migration tool
Move database creation step outside of the app package and run it as
part of the `init` rule. The `clear` rule now also delete the database.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,10 @@ max-args = 10
   # use of assert
   "S101"
 ]
+"migrations/*.py" = [
+  # implicit namespace package
+  "INP001"
+]
 
 
 # ==========
