Reorganise templates, styles and routers
The directory structure has been reorganised to accomodate multiple
pages on the website.

Templates are now organised through a "page > partials" structure. CSS
styles have been split per page, with the addition of another file for
styling common to all pages. Routers are now organise so that there is a
single routing submodule per page.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ ignore = [
   "ANN101", "ANN102",
   # function call in default argument
   "B008",
-  # sodos 
+  # TODOs
   "TD002", "TD003", "FIX002"
 ]
 
